Fix: no carousel arrows on mobile

--- a/components/Activities/activities.module.css
+++ b/components/Activities/activities.module.css
@@ -7,12 +7,6 @@
   margin-bottom: var(--space-lg);
 }
 
-@media screen and (max-width: 768px) {
-  .arrowBtn {
-    display: none!important;
-  }
-}
-
 .embla {
   display: flex;
   align-items: center;
@@ -37,4 +31,10 @@
   border-radius: 50%;
   border: solid 2px black;
   color: black;
+}
+
+@media screen and (max-width: 768px) {
+  .embla__prev, .embla__next {
+    display: none;
+  }
 }
